Rework Persistence API